platform/k8s/RKE2/board-https-redirect.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: board
spec:
  redirectScheme:
    scheme: https
    permanent: true
