platform/k8s/RKE2/board-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  namespace: board
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: board-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - board.local.rke2
      secretName: board-tls-secret
  rules:
    - host: board.local.rke2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-fe
                port:
                  number: 8080
